// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BouncingDots > snapshots > matches props snapshot 1`] = `
<div>
  <div
    class="sc-blHHSb hHrWxp aje-bouncing-dots custom-class is-small"
    style="color: red;"
  >
    <span
      class="sc-gtLWhw djiPUm aje-bouncing-dots__dot"
    />
    <span
      class="sc-gtLWhw jLZbRJ aje-bouncing-dots__dot"
    />
    <span
      class="sc-gtLWhw gDiXRP aje-bouncing-dots__dot"
    />
    <span
      class="sc-gtLWhw grYTUg aje-bouncing-dots__dot"
    />
    <span
      class="sc-gtLWhw ieepSw aje-bouncing-dots__dot"
    />
  </div>
</div>
`;

exports[`BouncingDots > snapshots > matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="sc-blHHSb iXbbFt aje-bouncing-dots is-medium"
  >
    <span
      class="sc-gtLWhw djiPUm aje-bouncing-dots__dot"
    />
    <span
      class="sc-gtLWhw jLZbRJ aje-bouncing-dots__dot"
    />
    <span
      class="sc-gtLWhw gDiXRP aje-bouncing-dots__dot"
    />
  </div>
</DocumentFragment>
`;
